# FastAPI-Poetry-demo

./: .env  README.md  main.py  pyproject.toml
app/: app.py
app/dependencies/authentication/: auth_common.py  jwt.py
app/models/: user.py
app/repository/: generate_regex.py  json_db_repository.py  users.json
app/router/: security.py  test.py  ui.py  user.py
app/static/css/: styles.css
app/static/font/: fonts.css
app/templates/: base.html  test.html
app/templates/user/: index.html
